Fixing mobile spacing issue

--- a/main.css
+++ b/main.css
@@ -2876,6 +2876,10 @@ h1{
     .grid-mid-row-8{
         grid-row: span 5;
     }
+
+    .page .about-page .about-box{
+        min-height: 600px;
+    }
 }
 
 @media only screen and (max-width:400px){
@@ -2884,10 +2888,10 @@ h1{
         font-size: 50px;
     }
     .centered-split-box .header-container{
-        margin-bottom: -45px;
+        margin-bottom: 0px;
     }
     .page .about-page .about-box .about-box-inner .about-box-upper .header-container{
-        margin-bottom: -40px;
+        margin-bottom: 0px;
     }
     .header-container h1{
         font-size: 40px;
